fix [#26591] File browser: select multiple files for Library append/link broken * added check for valid files a bit too eagerly in Rev.35654. Solved now by   setting correct type for .blend file contents. Objects are now tagged as   regular files, while the list (Mesh, Material, ...) (no idcode given) is   tagged as directory.